--- a/style.css
+++ b/style.css
@@ -1,3 +1,70 @@
-body {
-    background-color: aquamarine;
+html {
+    font-family: "helvetica", "sans serif";
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+.menu {
+    border-bottom: 1px solid #EAEAEB;
+    text-align: right;
+    height: 70px;
+    line-height: 70px;
+}
+
+.myLinks {
+    margin: 0 30px 0  0;
+
+}
+
+.myLinks a {
+    clear: right;
+    text-decoration: none;
+    color: gray;
+    margin: 0 10px;
+    line-height: 70px;
+    
+}
+
+label {
+    margin: 0 40px 0 0;
+    font-size: 26px;
+    line-height: 70px;
+    display: none;
+    width: 26px;
+    float: right; 
+}
+
+#toggle {
+    display: none;
+}
+
+/* for mobile devices */
+@media only screen and (max-width: 500px) {
+    label {
+        display: block;
+        cursor: pointer;
+    }
+
+    .myLinks {
+        text-align: center;
+        width: 100%;
+        display: none;
+    }
+
+    .myLinks a {
+        display: block;
+        border-bottom: 1px solid #EAEAEB;
+        margin: 0;
+    }
+
+    #toggle:checked + .myLinks {
+        display: block;
+    }
+
+
+
 }
