--- a/style.css
+++ b/style.css
@@ -8,13 +8,18 @@ html, body {
     margin: 0;
 }
 
+/* h1 {
+    text-align: centre;
+    display: flex;
+    justify-content: center;
+} */
+
 .menu {
     border-bottom: 1px solid #EAEAEB;
     text-align: right;
     height: 70px;
     line-height: 70px;
-    display: flex;
-    justify-content: flex-end;
+    
 }
 
 .myLinks {
@@ -36,8 +41,8 @@ label {
     font-size: 26px;
     line-height: 70px;
     display: none;
-    justify-content: flex-end;
     width: 26px;
+    float: right;
     
     
 }
@@ -47,13 +52,18 @@ label {
     
 }
 
+
+
+h1 {
+
+
+}
+
 /* for mobile devices */
 @media only screen and (max-width: 500px) {
     label {
         display: block;
         cursor: pointer;
-        
-        
 
     }
 
@@ -61,6 +71,7 @@ label {
         text-align: center;
         width: 100%;
         display: none;
+        
     }
 
     .myLinks a {
