--- a/style.css
+++ b/style.css
@@ -8,18 +8,7 @@ html, body {
     margin: 0;
 }
 
-main {
-    padding: 1em;
-    display: flex;
-    justify-content: center;
-}
-
-h1 {
-    text-align: centre;
-    display: flex;
-    justify-content: center;
-}
-
+/* Navigation menu */
 .menu {
     border-bottom: 1px solid #EAEAEB;
     text-align: right;
@@ -54,8 +43,48 @@ label {
 
 #toggle {
     display: none;
-    
 }
+
+/* Content */
+main {
+    padding: 1em;
+    display: flex;
+    justify-content: center;
+}
+
+section {
+    text-align: center;
+
+}
+h1 {
+    text-align: centre;
+    display: flex;
+    justify-content: center;
+}
+
+ /* button */
+ button {
+    
+
+ }
+ .btn {
+    background-color: grey;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	font-size: 16px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    border-radius: 12px;
+
+  }
+  
+  /* Darker background on mouse-over */
+  .btn:hover {
+    background-color:  #1199b4;
+    color: white;
+  } 
 
 
 /* for mobile devices */
