--- a/style.css
+++ b/style.css
@@ -8,7 +8,17 @@ html, body {
     margin: 0;
 }
 
+
 /* Navigation menu */
+.name{
+    float: left;
+    margin: 30px;
+    text-decoration: none;
+    color: gray;
+
+}
+
+
 .menu {
     border-bottom: 1px solid #EAEAEB;
     text-align: right;
@@ -47,7 +57,7 @@ label {
 
 /* Content */
 main {
-    padding: 1em;
+    margin: 0 1em 0 1em;
     display: flex;
     justify-content: center;
 }
@@ -68,7 +78,7 @@ h1 {
 
  }
  .btn {
-    background-color: grey;
+    background-color: gray;
 	color: white;
 	padding: 15px 32px;
 	text-align: center;
