--- a/style.css
+++ b/style.css
@@ -57,19 +57,23 @@ label {
 
 /* Content */
 main {
-    margin: 0 1em 0 1em;
+    width: 75%;
+    margin-left: 2rem;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+
 }
 
 section {
+    align-self: center;
     text-align: center;
+    
 
 }
 h1 {
     text-align: centre;
-    display: flex;
-    justify-content: center;
+    
 }
 
  /* button */
@@ -99,6 +103,11 @@ h1 {
 
 /* for mobile devices */
 @media only screen and (max-width: 500px) {
+
+    main {
+        margin-left: 3rem;
+    }
+
     label {
         display: block;
         cursor: pointer;
