--- a/style.css
+++ b/style.css
@@ -100,6 +100,16 @@ h1 {
     color: white;
   } 
 
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    background-color: gray;
+}
 
 /* for mobile devices */
 @media only screen and (max-width: 500px) {
