--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,7 @@ html, body {
     
 }
 
-label {
+label[for=toggle] {
     margin: 0 40px 0 0;
     font-size: 26px;
     line-height: 70px;
@@ -59,6 +59,7 @@ label {
 main {
     width: 75%;
     margin-left: 2rem;
+    margin-bottom: 4rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -108,6 +109,7 @@ footer {
     left: 0;
     bottom: 0;
     background-color: gray;
+    box-sizing: border-box;
 }
 
 /* for mobile devices */
@@ -117,7 +119,7 @@ footer {
         margin-left: 3rem;
     }
 
-    label {
+    label[for=toggle] {
         display: block;
         cursor: pointer;
 
