Fix nav menu positioning bug

--- a/src/style.css
+++ b/src/style.css
@@ -135,6 +135,7 @@ footer {
     .myLinks a {
         
         display: block;
+        clear: both;
         background-color: #EAEAEB;
         border-bottom: 1px solid #EAEAEB;
         margin: 0;
